Editing of ROS chapter in progress

--- a/Arduino.tex
+++ b/Arduino.tex
@@ -77,7 +77,7 @@ An important function of the Arduino sketch is to track the movement of the moto
 
 In order to measure the angular velocity of the motors, motor encoders are attached. These feedback devices are incremental position encoders, meaning they monitor the change in the motor shaft's position compared to its starting position. 
 
-\begin{wrapfigure}{l}{0.5\textwidth}
+\begin{wrapfigure}{L}{0.5\textwidth}
 	\caption{\cite{fig_optical_encoders}}
 	\centering
 	\includegraphics[width=0.5\textwidth]{opticalEncoders}
