--- a/mainBib.bib
+++ b/mainBib.bib
@@ -30,6 +30,12 @@
    url = {http://web.archive.org/web/20160915053759/http://www.tigoe.com:80/pcomp/code/circuits/motors/controlling-dc-motors/},
 }
 
+@MISC{differentialDrivePackage,
+   author = "Jon Stephan",
+   title = "differential\_drive",
+   url = {http://web.archive.org/web/20161215021919/http://wiki.ros.org/differential_drive},
+}
+
 @MISC{differentialSteeringPaper,
    author = "G.W. Lucas",
    title = "A Tutorial and Elementary Trajectory Model for the Differential Steering System of Robot Wheel Actuators",
@@ -55,6 +61,13 @@
    url = {https://web.archive.org/web/20170218142257/gammon.com.au/interrupts},
 }
 
+@MISC{GPS_trilateration,
+   title = "What is trilateration?",
+   journal = "Mio",
+   type = "Online",
+   url = {http://web.archive.org/web/20170629001858/http://www.mio.com/technology-trilateration.htm},
+}
+
 @MISC{newPing,
    author = "Tim Eckel",
    title = "NewPing Library for Arduino",
@@ -70,6 +83,22 @@ title = {PING))\textsuperscript{TM} Ultrasonic Distance Sensor (\#28015) Documen
 year = 2009,
 language = {English},
 pagetotal = {12},
+}
+
+@MISC{REP-103,
+author = {Tully Foote and Mike Purvis},
+title = {Standard Units of Measure and Coordinate Conventions},
+year = 2010,
+language = {English},
+url = {http://web.archive.org/web/20170709214619/http://www.ros.org/reps/rep-0103.html}
+}
+
+@MISC{REP-105,
+author = {Wim Meeussen},
+title = {Coordinate Frames for Mobile Platforms},
+year = 2010,
+language = {English},
+url = {http://web.archive.org/web/20170712124427/http://www.ros.org/reps/rep-0105.html}
 }
 
 @manual{sabertoothUserGuide,
